[package]
name = "data_scraper"
authors = ["Meet Patel"]
description = "Scrape data from Binance and insert into TimeScaleDB"
version = "0.1.0"
readme = "README.md"
repository = "https://github.com/MeetThePatel/data_scraper"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_zip = "0.0.7"
chrono = "0.4.19"
csv-async = { version = "1.2.4", features = ["with_serde", "tokio"] }
futures = "0.3"
futures-util = "0.3.21"
reqwest = "0.11.10"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.6", features = ["with-chrono-0_4"] }
url = "2.2.2"